# roads

./: .gitignore  cst.js  dune-project  language-configuration.json  package-lock.json  package-manager-commands  package.json  roads.js  roads.opam  tokeniser.js
agnostic-stdlib/: collections.rd  crypto.rd  encoding.rd  number.rd  prelude.rd  string.rd
agnostic-stdlib/data/: datetime.rd  uri.rd
agnostic-stdlib/outside/: io.rd
boring/: example.txt
client/src/: extension.ts
dev/: one.rd  two.rd
examples/: basics.rd  idioms.rd  modules-2.rd  modules.rd  roadmap-2.md  roadmap.md  sandbox.rd  thoughts.md
examples/agnostic-stdlib/: cache.rd  crypto.rd  encoding.rd  log.rd  prelude.rd  string.rd
examples/agnostic-stdlib/core/: bytestream.rd  collections.rd  number.rd  regex.rd  string.rd
examples/dev/: one.rd  three.rd  two.rd
examples/onelang/: notepad
examples/project/: project.rd
examples/stdlib/: collections.rd  iteration.rd  prelude.rd  string.rd
lib/: dune  roads.ml
onelang/: notepad  schema-test
onelang/level-1-data-representation/: hcl-config  hcl-config.rd  nginx-config  nginx-config.rd  toml-config.rd
onelang/level-2-data-schema/: cue-config-1  cue-config-1.rd  cue-config-2  cue-config-3  cue-config-3.rd
roads-vscode-language-extension/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
roads-vscode-language-extension/examples/: example1.rd
roads-vscode-language-extension/syntaxes/: roads.tmLanguage.json
server/src/: server.ts
syntaxes/: resources.txt  roads.tmLanguage.json
test/: dune
(+16 files in other folders)
