opam-version: "1.2"
maintainer: "simon@syhol.io"
authors: ["Simon Holloway"]
homepage: "https://github.com/syhol/roads"
bug-reports: "https://github.com/syhol/roads/issues"
dev-repo: "https://github.com/syhol/roads.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: ["dune" "runtest" "-p" name]

depends: [
  "dune" {build}
  "alcotest" {test}
]
